# stock-master-odoo

./: .gitignore
backend/: .env  API_ENDPOINTS.md  BREADME.md  Cargo.toml  sample_data.sql
backend/migrations/: 20251122_01_create_users.sql  20251122_02_create_warehouses.sql  20251122_03_create_categories.sql  20251122_04_create_products.sql  20251122_05_create_product_stock.sql  20251122_06_create_stock_ledger.sql  20251122_07_create_receipts.sql  20251122_08_create_deliveries.sql  20251122_09_create_transfers.sql  20251122_10_create_adjustments.sql
backend/src/: app.rs  main.rs  router.rs
backend/src/config/: database.rs  mod.rs
backend/src/dto/: adjustment_dto.rs  auth_dto.rs  category_dto.rs  delivery_dto.rs  mod.rs  product_dto.rs  receipt_dto.rs  transfer_dto.rs  user_dto.rs  warehouse_dto.rs
backend/src/error/: app_error.rs  mod.rs
backend/src/handlers/: adjustments.rs  auth.rs  categories.rs  dashboard.rs  deliveries.rs  mod.rs  move_history.rs  openapi.rs  products.rs  receipts.rs  stock.rs  stock_ledger.rs  transfers.rs  users.rs  warehouses.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: adjustment.rs  category.rs  delivery.rs  mod.rs  product.rs  product_stock.rs  receipt.rs  stock_ledger.rs  transfer.rs  user.rs  warehouse.rs
backend/src/repository/: adjustment_repo.rs  category_repo.rs  delivery_repo.rs  mod.rs  product_repo.rs  product_stock_repo.rs  receipt_repo.rs  stock_ledger_repo.rs  transfer_repo.rs  user_repo.rs  warehouse_repo.rs
backend/src/services/: auth_service.rs  mod.rs  stock_service.rs
(+113 files in other folders)
